--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "22.9.1",
