--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
