--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
@@ -17,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.6",
-    "swiper": "^10.0.4"
+    "swiper": "^10.0.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "22.9.1",
