--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.10",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
